--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,12 +1,11 @@
-- Melhora a integração com o nosso servidor.
-- Corrige um problema na visualização da tela "Todas" para versões anteriores ao iOS 11.
-- Pequenas melhorias internas.
+Alô Praia Vermelha! Vai uma caronaê? Liberamos as opções da PV.
+Se desejar ative o filtro por campus na página inicial!
 
-1.3.1:
-- Corrige problema ao salvar o perfil indicando que não possui carro
-- Corrige no histórico o texto de caronas voltando da universidade 
-- Caronas ofertadas sem caronistas aparecem com uma mensagem indicativa para o motorista
-- Atingimos mais de 90% do código em Swift :)
+- Melhor tratamento das notificações recebidas :)
+- Corrige som da notificação que poderia não ser reproduzido.
+- Corrige problemas que poderiam ocorrer na tela de edição de perfil.
+- Melhora a integração com o nosso servidor.
+- Pequenas melhorias internas.
 
 Quer ser um testador (Beta Tester) do Caronaê? Você irá receber as atualizações primeiro e pode ajudar a melhorar ainda mais o funcionamento enviando seus comentários diretamente para os desenvolvedores! Envie um email para caronae@fundoverde.ufrj.br
 
